# 2kdex

./: .gitignore  README.md  main.py  pyproject.toml
discord_bot/: discord_bot.py
ocr/: test.py  test2.py  test_easyocr.py  test_easyocr2.py  test_openai.py
