[project]
name = "2kdex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.3",
    "easyocr>=1.7.2",
    "openai>=1.101.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.1",
]
